# bbdd-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build-cli.yaml  publish-cli.yaml
src/: client.rs  download.rs  error.rs  fetcher.rs  lib.rs  main.rs  parse.rs  tests.rs  util.rs
src/auth/: web.rs
src/cmd/: client.rs  download.rs  ffmpeg.rs  local.rs  login.rs  mod.rs  out.rs  whoami.rs
