[package]
name = "bbdd"
version = "0.1.0"
edition = "2024"

[dependencies]
abv = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", optional = true }
hex = { version = "0.4", features = ["serde"] }
md5 = "0.8"
rand = "0.9"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["gzip", "json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros"], optional = true }
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
qr2term = "0.3"

[features]
default = ["native-tls"]
cli = ["dep:clap", "dep:tokio"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
reqwest = ["dep:reqwest"]
