[package]
name = "bbdd"
version = "0.1.5"
edition = "2024"
description = "bilibili video download library and cli"
license = "MPL-2.0"
repository = "https://github.com/niuhuan/bbdd-rs"
build = "build.rs"

[dependencies]
abv = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", optional = true }
hex = { version = "0.4", features = ["serde"] }
md5 = "0.8"
rand = "0.9"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["gzip", "json"], optional = true }
rsmpeg = { version = "0.18.0", default-features = false, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros"], optional = true }
tracing = "0.1"
dirs = { version = "6", optional = true }
dialoguer = { version = "0.12", optional = true }
qr2term = { version = "0", optional = true }
console = { version = "0.16", optional = true }
indicatif = { version = "0.18", optional = true }
futures = { version = "0.3", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
qr2term = "0"

[features]
default = ["native-tls"]
native-tls = ["dep:reqwest", "reqwest/native-tls"]
rustls-tls = ["dep:reqwest", "reqwest/rustls-tls"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
cli = ["dep:clap", "dep:tokio", "tokio/full", "dep:dirs", "dep:dialoguer", "dep:qr2term", "dep:console", "dep:indicatif", "dep:futures", "dep:tracing-subscriber"]
rsmpeg = ["dep:rsmpeg"]
link_vcpkg_ffmpeg = ["dep:rsmpeg", "rsmpeg/link_vcpkg_ffmpeg"]
ffmpeg6 = ["rsmpeg/ffmpeg6"]
ffmpeg7 = ["rsmpeg/ffmpeg7"]
ffmpeg7_1 = ["rsmpeg/ffmpeg7_1"]
ffmpeg8 = ["rsmpeg/ffmpeg8"]
